test/suites/fail-check/005.expected
  × One or more errors occured.

Error: T-002

  × The following terms are not equal:
  │   1: Eq(Nat, S(S(Z)), S(S(Z)))
  │   2: Eq(Nat, S(S(Z)), opaqueTwo)
  │ 
   ╭─[005.pol:4:26]
 3 │ data Eq(a: Type, x y: a) {
 4 │     Refl(a: Type, x: a): Eq(a, x, x)
   ·                          ─────┬─────
   ·                               ╰── Source of (1)
 5 │ }
   ╰────
    ╭─[005.pol:11:9]
 10 │ /// This proof typechecks
 11 │ let p2: Eq(Nat, S(S(Z)), opaqueTwo) {Refl(Nat, S(S(Z)))}
    ·         ─────────────┬─────────────  ─────────┬────────
    ·                      │                        ╰── While elaborating
    ·                      ╰── Source of (2)
    ╰────
  help: The two subterms S(S(Z)) and opaqueTwo are not equal.
